Bug fix : Modal broken + Connected player list on mobile z-index issue

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -109,7 +109,7 @@ $text-color: rgb(33, 37, 41);
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 2;
+  z-index: 100;
   display: none;
   text-align: center;
   padding-top: 2%;
@@ -145,7 +145,7 @@ $text-color: rgb(33, 37, 41);
   transform: translate(0);
 }
 .back-active {
-  z-index: 1;
+  z-index: 99;
   background-color: rgba(0, 0, 0, 0.65);
 }
 .slide-close {
