--- a/frontend/src/app/components/lobby/lobby.component.scss
+++ b/frontend/src/app/components/lobby/lobby.component.scss
@@ -21,6 +21,7 @@
 }
 .room {
   display: flex;
+  z-index: -1;
   justify-content: space-between;
   align-items: center;
 }
